tests/neg-scalajs/scala-types-inside-js-native.check
-- Error: tests/neg-scalajs/scala-types-inside-js-native.scala:7:8 -----------------------------------------------------
7 |  class A1 // error
  |  ^^^^^^^^
  |Native JS traits, classes and objects cannot contain inner Scala traits, classes or objects (i.e., not extending js.Any)
-- Error: tests/neg-scalajs/scala-types-inside-js-native.scala:8:8 -----------------------------------------------------
8 |  trait A2 // error
  |  ^^^^^^^^
  |Native JS traits, classes and objects cannot contain inner Scala traits, classes or objects (i.e., not extending js.Any)
-- Error: tests/neg-scalajs/scala-types-inside-js-native.scala:9:9 -----------------------------------------------------
9 |  object A3 // error
  |  ^^^^^^^^^
  |Native JS traits, classes and objects cannot contain inner Scala traits, classes or objects (i.e., not extending js.Any)
-- Error: tests/neg-scalajs/scala-types-inside-js-native.scala:14:8 ----------------------------------------------------
14 |  class B1 // error
   |  ^^^^^^^^
   |Native JS traits, classes and objects cannot contain inner Scala traits, classes or objects (i.e., not extending js.Any)
-- Error: tests/neg-scalajs/scala-types-inside-js-native.scala:15:8 ----------------------------------------------------
15 |  trait B2 // error
   |  ^^^^^^^^
   |Native JS traits, classes and objects cannot contain inner Scala traits, classes or objects (i.e., not extending js.Any)
-- Error: tests/neg-scalajs/scala-types-inside-js-native.scala:16:9 ----------------------------------------------------
16 |  object B3 // error
   |  ^^^^^^^^^
   |Native JS traits, classes and objects cannot contain inner Scala traits, classes or objects (i.e., not extending js.Any)
-- Error: tests/neg-scalajs/scala-types-inside-js-native.scala:22:8 ----------------------------------------------------
22 |  class C1 // error
   |  ^^^^^^^^
   |Native JS traits, classes and objects cannot contain inner Scala traits, classes or objects (i.e., not extending js.Any)
-- Error: tests/neg-scalajs/scala-types-inside-js-native.scala:23:8 ----------------------------------------------------
23 |  trait C2 // error
   |  ^^^^^^^^
   |Native JS traits, classes and objects cannot contain inner Scala traits, classes or objects (i.e., not extending js.Any)
-- Error: tests/neg-scalajs/scala-types-inside-js-native.scala:24:9 ----------------------------------------------------
24 |  object C3 // error
   |  ^^^^^^^^^
   |Native JS traits, classes and objects cannot contain inner Scala traits, classes or objects (i.e., not extending js.Any)
-- Error: tests/neg-scalajs/scala-types-inside-js-native.scala:35:9 ----------------------------------------------------
35 |  object D1 // error
   |  ^^^^^^^^^
   |Native JS traits, classes and objects cannot contain inner Scala traits, classes or objects (i.e., not extending js.Any)
